added Certifications section

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -38,6 +38,9 @@
       @apply sm:mx-10;
       @apply z-10; 
     }
+    hr {
+      @apply m-5;
+    }
     .frontend {
       @apply underline;
       @apply decoration-emerald-400;
