styled mobile Contact section

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -41,6 +41,8 @@
       @apply md:text-sm;
       @apply lg:text-base;
       @apply font-bold;
+      @apply self-end;
+      @apply animate-pulse;
     }
     hr {
       @apply m-5;
